<resources>
    <string name="app_name">My Application</string>
    <string name="strStartPing">Start Ping</string>
    <string name="strStopPing">Stop Ping</string>
    <string name="strPingResult">ping result</string>
    <string name="strShowMyIP">Show my IP</string>
    <string name="strMyIPresult">my ip result</string>
    <string name="strMyWanIPresult">My external IP result</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="pagePing">Ping</string>
    <string name="MyIP">My IP</string>
    <string name="exit">exit</string>
    <string name="ShowWAN_IP">Show WAN IP</string>
    <string name="MyExternalIPResult">My external IP result:</string>
</resources>