<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/startPing"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:text="@string/strStartPing"
        android:onClick="startPing"
        app:layout_constraintEnd_toStartOf="@+id/stopPing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterIPaddr" />

    <Button
        android:id="@+id/stopPing"
        android:layout_width="140dp"
        android:layout_height="45dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:text="@string/strStopPing"
        android:onClick="stopPing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterIPaddr" />

    <EditText
        android:id="@+id/enterIPaddr"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="75dp"
        android:ems="10"
        android:hint="Enter IP address"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagePing" />

    <TextView
        android:id="@+id/textViewPingResult"
        android:layout_width="348dp"
        android:layout_height="238dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="35dp"
        android:text="@string/strPingResult"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startPing" />

    <Button
        android:id="@+id/pagePing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="80dp"
        android:text="@string/pagePing"
        app:layout_constraintBottom_toTopOf="@+id/enterIPaddr"
        app:layout_constraintEnd_toStartOf="@+id/pageIP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pageIP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="80dp"
        android:text="@string/MyIP"
        android:onClick="MyIP"
        app:layout_constraintBottom_toTopOf="@+id/enterIPaddr"
        app:layout_constraintEnd_toStartOf="@+id/buttonExit"
        app:layout_constraintStart_toEndOf="@+id/pagePing"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="80dp"
        android:text="@string/exit"
        android:onClick="exit"
        app:layout_constraintBottom_toTopOf="@+id/enterIPaddr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pageIP"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>